--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       "test": "grunt validate --verbose"
     },
     "engines": {
-      "node": "~0.10.0 || ~0.12.0 || ^4.2.0"
+      "node": "~0.12.8"
     },
     "dependencies": {
       "bcryptjs": "2.3.0",
