--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "keywords": [
     "ghost",
     "blog",
-    "cms"
+    "cms",
+    "fedes"
   ],
   "repository": {
     "type": "git",
@@ -73,6 +74,7 @@
   },
   "devDependencies": {
     "bower": "1.4.1",
+    "clean-css":"^3.4.12",
     "csscomb": "3.1.8",
     "grunt": "0.4.5",
     "grunt-bg-shell": "2.3.1",
@@ -90,6 +92,13 @@
     "grunt-mocha-istanbul": "3.0.1",
     "grunt-shell": "1.1.2",
     "grunt-update-submodules": "0.4.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-express": "^0.3.5",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.3",
     "istanbul": "0.4.2",
     "jscs-jsdoc": "1.3.1",
     "matchdep": "1.0.0",
@@ -101,7 +110,8 @@
     "sinon": "1.17.3",
     "supertest": "1.1.0",
     "tmp": "0.0.28",
-    "top-gh-contribs": "2.0.2"
+    "top-gh-contribs": "2.0.2",
+    "vinyl-map": "^1.0.1"
   },
   "greenkeeper": {
     "ignore": [
