--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   },
   "devDependencies": {
     "bower": "1.4.1",
-    "clean-css":"^3.4.12",
+    "clean-css": "^3.4.12",
     "csscomb": "3.1.8",
     "grunt": "0.4.5",
     "grunt-bg-shell": "2.3.1",
@@ -104,6 +104,8 @@
     "matchdep": "1.0.0",
     "mocha": "2.4.5",
     "nock": "7.1.0",
+    "orm": "^3.0.0",
+    "q-orm": "0.0.3",
     "rewire": "2.5.1",
     "should": "8.2.1",
     "should-http": "0.0.4",
