--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "gulp-express": "^0.3.5",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
     "istanbul": "0.4.2",
     "jscs-jsdoc": "1.3.1",
     "matchdep": "1.0.0",
