--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node": "~0.10.0 || ~0.12.0 || ^4.2.0"
   },
   "dependencies": {
+    "async": "^1.5.2",
     "bcryptjs": "2.3.0",
     "bluebird": "3.3.3",
     "body-parser": "1.14.2",
