--- a/config/seed/fixtures/posts_tags.yml
+++ b/config/seed/fixtures/posts_tags.yml
@@ -99,3 +99,34 @@
 
 - tag_slug: cultura
   post_slug: blog-post-6
+
+# tag:aliadosfedes
+- tag_slug: aliadosfedes
+  post_slug: imagen-ecolac
+
+- tag_slug: aliadosfedes
+  post_slug: crisfe
+
+- tag_slug: aliadosfedes
+  post_slug: gad
+
+- tag_slug: aliadosfedes
+  post_slug: holcim
+
+- tag_slug: aliadosfedes
+  post_slug: lundin
+
+- tag_slug: aliadosfedes
+  post_slug: nobis
+
+- tag_slug: aliadosfedes
+  post_slug: prefectura-de-loja
+
+- tag_slug: aliadosfedes
+  post_slug: redeamerica
+
+- tag_slug: aliadosfedes
+  post_slug: utpl
+
+- tag_slug: aliadosfedes
+  post_slug: aei
