enhance seeds & allow editing proyectos

--- a/config/seed/fixtures/tags.yml
+++ b/config/seed/fixtures/tags.yml
@@ -2,6 +2,7 @@
 - hidden: false
   name: Proyectos
   slug: proyectos
+  description: nam ea quod aperiri eruditi.
   uuid: <%= uuid %>
 
 - hidden: false
