Create Tag for aliados

--- a/config/seed/fixtures/tags.yml
+++ b/config/seed/fixtures/tags.yml
@@ -36,6 +36,11 @@
   uuid: <%= uuid %>
 
 - hidden: false
+  name: Aliados
+  slug: aliados
+  uuid: <%= uuid %>
+
+- hidden: false
   name: Blog-category
   slug: blog-category
   uuid: <%= uuid %>
