Add border for projects

--- a/config/seed/fixtures/posts_tags.yml
+++ b/config/seed/fixtures/posts_tags.yml
@@ -8,6 +8,15 @@
 - tag_slug: proyectos
   post_slug: prendho
 
+- tag_slug: proyectos
+  post_slug: sinfin
+
+- tag_slug: proyectos
+  post_slug: la-palma
+
+- tag_slug: proyectos
+  post_slug: escuela-de-negocios
+
 - tag_slug: carouselimagen
   post_slug: carrusel-1
 
