--- a/config/production.ecosystem.json.example
+++ b/config/production.ecosystem.json.example
@@ -8,7 +8,9 @@
         "NODE_ENV"                 :"production",
         "DB_FEDES_USER"            :"fedes",
         "DB_FEDES_DATABASE"        :"fedes_production",
-        "DB_FEDES_PASSWORD"        :"$PASSWD"
+        "DB_FEDES_PASSWORD"        :"$PASSWD",
+        "SMTP_LOGIN"               :"$SMTP_LOGIN",
+        "SMTP_PASSWORD"            :"$SMPT_PASSWD"
       }
     }
   ]
