--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "pg": "4.1.1"
   },
   "devDependencies": {
+    "clean-css": "^3.4.19",
     "gh-contrib-list": "0.1.2",
     "git-wrapper": "0.1.1",
     "grunt": "1.0.1",
@@ -101,6 +102,13 @@
     "grunt-shell": "1.3.1",
     "grunt-subgrunt": "1.2.0",
     "grunt-update-submodules": "0.4.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-express": "^0.3.5",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
     "istanbul": "0.4.4",
     "matchdep": "1.0.1",
     "mocha": "3.0.2",
