--- a/package.json
+++ b/package.json
@@ -77,11 +77,9 @@
     "validator": "5.5.0",
     "xml": "1.0.1"
   },
-  "optionalDependencies": {
-  },
+  "optionalDependencies": {},
   "devDependencies": {
     "clean-css": "^3.4.19",
-    "sqlite3": "3.1.4",
     "gh-contrib-list": "0.1.2",
     "git-wrapper": "0.1.1",
     "grunt": "1.0.1",
@@ -116,6 +114,7 @@
     "should": "11.1.0",
     "should-http": "0.0.4",
     "sinon": "1.17.5",
+    "sqlite3": "^3.1.4",
     "supertest": "1.2.0",
     "tmp": "0.0.28",
     "vinyl-map": "^1.0.1"
