--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fedes-website",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "fedes website",
   "author": "noggalito",
   "homepage": "https://github.com/noggalito/fedes",
@@ -27,39 +27,46 @@
     "node": "~0.10.0 || ~0.12.0 || ^4.2.0"
   },
   "dependencies": {
-    "amperize": "https://github.com/AileenCGN/amperize/tarball/fixed-layout-for-small-images",
+    "amperize": "0.3.1",
     "archiver": "1.0.1",
     "bcryptjs": "2.3.0",
     "bluebird": "3.4.1",
     "body-parser": "1.15.2",
-    "bookshelf": "0.10.0",
+    "bookshelf": "0.9.4",
     "chalk": "1.1.3",
     "cheerio": "0.20.0",
     "compression": "1.6.2",
     "connect-slashes": "1.3.1",
     "cookie-session": "1.2.0",
-    "cors": "2.7.1",
+    "cors": "2.8.1",
     "csv-parser": "1.9.3",
     "downsize": "0.0.8",
     "express": "4.14.0",
-    "express-hbs": "1.0.2",
-    "extract-zip": "1.5.0",
+    "express-hbs": "1.0.3",
+    "extract-zip-fork": "1.5.1",
     "fs-extra": "0.30.0",
     "ghost-gql": "0.0.5",
     "glob": "5.0.15",
-    "gscan": "0.0.11",
+    "gscan": "0.0.15",
     "html-to-text": "2.1.3",
     "image-size": "0.5.0",
     "intl": "1.2.4",
     "intl-messageformat": "1.3.0",
     "jsonpath": "0.2.6",
-    "knex": "0.11.10",
-    "lodash": "4.15.0",
-    "moment": "2.14.1",
+    "knex": "0.10.0",
+    "lodash": "3.10.1",
+    "lodash.frompairs": "4.0.1",
+    "lodash.omitby": "4.6.0",
+    "lodash.orderby": "4.6.0",
+    "lodash.pickby": "4.6.0",
+    "lodash.topairs": "4.3.0",
+    "lodash.tostring": "4.1.4",
+    "lodash.uniqby": "4.7.0",
+    "moment": "2.15.0",
     "moment-timezone": "0.5.5",
     "morgan": "1.7.0",
     "multer": "1.2.0",
-    "netjet": "1.1.2",
+    "netjet": "1.1.3",
     "node-uuid": "1.4.7",
     "nodemailer": "0.7.1",
     "oauth2orize": "1.5.0",
@@ -79,7 +86,7 @@
   },
   "optionalDependencies": {},
   "devDependencies": {
-    "clean-css": "^3.4.19",
+    "clean-css": "^3.4.20",
     "gh-contrib-list": "0.1.2",
     "git-wrapper": "0.1.1",
     "grunt": "1.0.1",
@@ -122,6 +129,9 @@
   },
   "greenkeeper": {
     "ignore": [
+      "bookshelf",
+      "knex",
+      "lodash",
       "glob",
       "mysql",
       "nodemailer",
